# SmartReceipts

./: .gitignore  HARD_RECEIPTS.md  SPEC.md
Smart Receipts/: ContentView.swift  Item.swift  Smart_ReceiptsApp.swift
Smart Receipts.xcodeproj/: project.pbxproj
apps/ios/Smart Receipts/: RootView.swift  Smart_ReceiptsApp.swift
apps/ios/Smart Receipts.xcodeproj/: project.pbxproj
apps/ios/Smart Receipts/Capture/: CaptureView.swift  DocumentScannerView.swift  ReceiptDraft.swift  ReviewView.swift
apps/ios/Smart Receipts/Dashboard/: DashboardView.swift
apps/ios/Smart Receipts/Models/: ReceiptImageStorage.swift  ReceiptMapping.swift  ReceiptModel.swift
apps/macos-labeler/: Package.swift
apps/macos-labeler/Sources/ReceiptLabeler/: ReceiptLabelerApp.swift
apps/macos-labeler/Sources/ReceiptLabeler/Models/: DatasetController.swift  DatasetEntry.swift  ImageIDGenerator.swift  LabelDocument.swift  LabelDraft.swift  LabelStatus.swift  LabelStore.swift  VendorStore.swift
apps/macos-labeler/Sources/ReceiptLabeler/Util/: ImageLoader.swift  ImageMetadata.swift
bench/: pyproject.toml
bench/src/bench/: __init__.py  dataset.py  imageid.py  lint.py  prelabel.py  report.py  runner.py  schema.py
bench/src/bench/metrics/: __init__.py  cer.py  field_f1.py  latency.py  normalize.py  teds.py
bench/src/bench/pipelines/: __init__.py  base.py  swift_pipeline.py
bench/tests/: test_schema_roundtrip.py
dashboard/: build.py  dashboard.template.html
shared/schema/: receipt.schema.json
tools/ocr-cli/: Package.swift
tools/ocr-cli/Sources/ocr-cli/: main.swift
(+7 files in other folders)
