[project]
name = "smart-receipts-bench"
version = "0.1.0"
description = "Benchmark harness for Smart Receipts OCR pipelines."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "jsonschema>=4.22",
    "typer>=0.12",
    "rich>=13.7",
    "jiwer>=3.0",
    "apted>=1.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]

[project.scripts]
bench = "bench.runner:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
